# ShimCoil_CurrentControl

./: ArduinoController.py  README.md  ShimController.py  arduino_current_controller_routines.py  arduino_tca_useraj.py  calibration.csv  channel_voltage_data.txt  current_control.py  gen_documentation.bash  pyproject.toml  requirements.txt  setpoints.csv  tkinter-matplotlib.py
docs/: ArduinoController64.md  ArduinoControllerCS.md  README.md  ShimController.md  version.md
docs/src/ShimCoil/: ArduinoController.md  ShimController.md  index.md  version.md
src/ShimCoil/: ArduinoController.py  ArduinoController64.py  ArduinoControllerCS.py  ShimController.py  __init__.py
src/ShimCoil/data/: calibration.csv  setpoints.csv
testing/: README.md  compare_coil_const.py  setpoints.csv  test_channel_response.py  test_coil_constant.py  test_connectivity.py
testing/coil_const/: coil_constants.csv
testing/response/: README.md
