[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "ShimCoil"
authors  = [{name="Derek Fujimoto", email="dfujimoto@triumf.ca" }]
description = "Control shim coil currents via serial USB connection"
readme = "README.md"
classifiers = [
        "Programming Language :: Python :: 3",
        "Operating System :: POSIX :: Linux",
]
license = {file = "LICENSE"}
requires-python = ">=3.5"
dependencies = ['numpy', 'pandas', 'datetime', 'pyserial']
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/ucn-triumf/ShimCoil_CurrentControl"
"Bug Tracker" = "https://github.com/ucn-triumf/ShimCoil_CurrentControl/issues"

# set version
[tool.hatch.version]
path = "src/ShimCoil/version.py"

# packages
[tool.hatch.build.targets.wheel]
packages = ["src/ShimCoil"]
